CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_indiv_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_indiv_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_indiv_hist</externalName>
   <fields>
        <fullName>cde_etncty__c</fullName>
        <description>cde_etncty</description>
        <externalDeveloperName>cde_etncty</externalDeveloperName>
        <label>Ethnicity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_gender__c</fullName>
        <description>cde_gender</description>
        <externalDeveloperName>cde_gender</externalDeveloperName>
        <label>Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_level_grade_hghst__c</fullName>
        <description>cde_level_grade_hghst</description>
        <externalDeveloperName>cde_level_grade_hghst</externalDeveloperName>
        <label>Highest Education Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>cde_race_1__c</fullName>
        <description>cde_race_1</description>
        <externalDeveloperName>cde_race_1</externalDeveloperName>
        <label>Race 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_race_2__c</fullName>
        <description>cde_race_2</description>
        <externalDeveloperName>cde_race_2</externalDeveloperName>
        <label>Race 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_race_3__c</fullName>
        <description>cde_race_3</description>
        <externalDeveloperName>cde_race_3</externalDeveloperName>
        <label>Race 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_rel_child__c</fullName>
        <description>cde_rel_child</description>
        <externalDeveloperName>cde_rel_child</externalDeveloperName>
        <label>Relationship to Child</label>
        <length>3</length>
        <type>Text</type>
    </fields>
     <fields>
        <fullName>cde_source_vrfyd_citizen__c</fullName>
        <description>cde_source_vrfyd_citizen</description>
        <externalDeveloperName>cde_source_vrfyd_citizen</externalDeveloperName>
        <label>Citizenship verified source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_dob__c</fullName>
        <description>cde_source_vrfyd_dob</description>
        <externalDeveloperName>cde_source_vrfyd_dob</externalDeveloperName>
        <label>DOB verified source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_idnty__c</fullName>
        <description>cde_source_vrfyd_idnty</description>
        <externalDeveloperName>cde_source_vrfyd_idnty</externalDeveloperName>
        <label>Identity verification code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_mar__c</fullName>
        <description>cde_status_mar</description>
        <externalDeveloperName>cde_status_mar</externalDeveloperName>
        <label>Marital Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_suffix_name__c</fullName>
        <description>cde_suffix_name</description>
        <externalDeveloperName>cde_suffix_name</externalDeveloperName>
        <label>Name suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif_dob__c</fullName>
        <description>cde_type_verif_dob</description>
        <externalDeveloperName>cde_type_verif_dob</externalDeveloperName>
        <label>DOB verification type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif_ssn__c</fullName>
        <description>cde_type_verif_ssn</description>
        <externalDeveloperName>cde_type_verif_ssn</externalDeveloperName>
        <label>SSN verification type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_verif_ssn__c</fullName>
        <description>cde_verif_ssn</description>
        <externalDeveloperName>cde_verif_ssn</externalDeveloperName>
        <label>SSN verification code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_vrfyd_idnty__c</fullName>
        <description>cde_vrfyd_idnty</description>
        <externalDeveloperName>cde_vrfyd_idnty</externalDeveloperName>
        <label>Identity verification code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_out_house__c</fullName>
        <description>dte_begin_out_house</description>
        <externalDeveloperName>dte_begin_out_house</externalDeveloperName>
        <label>House out begin date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_dob__c</fullName>
        <description>dte_dob</description>
        <externalDeveloperName>dte_dob</externalDeveloperName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_out_house__c</fullName>
        <description>dte_end_out_house</description>
        <externalDeveloperName>dte_end_out_house</externalDeveloperName>
        <label>House out end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_grade_first__c</fullName>
        <description>dte_grade_first</description>
        <externalDeveloperName>dte_grade_first</externalDeveloperName>
        <label>First Grade Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif_dob__c</fullName>
        <description>dte_verif_dob</description>
        <externalDeveloperName>dte_verif_dob</externalDeveloperName>
        <label>DOB verification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif_ssn__c</fullName>
        <description>dte_verif_ssn</description>
        <externalDeveloperName>dte_verif_ssn</externalDeveloperName>
        <label>SSN verification date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng_dob__c</fullName>
        <description>idn_case_vrfyng_dob</description>
        <externalDeveloperName>idn_case_vrfyng_dob</externalDeveloperName>
        <label>DOB verifying Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng_ssn__c</fullName>
        <description>idn_case_vrfyng_ssn</description>
        <externalDeveloperName>idn_case_vrfyng_ssn</externalDeveloperName>
        <label>SSN verifying Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Individual ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_INDIV__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Individual Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_indiv_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_hist__c</fullName>
        <description>idn_indiv_hist</description>
        <externalDeveloperName>idn_indiv_hist</externalDeveloperName>
        <label>Individual ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_state__c</fullName>
        <description>idn_state</description>
        <externalDeveloperName>idn_state</externalDeveloperName>
        <label>State ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_indiv_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng_dob__c</fullName>
        <description>idn_user_vrfyng_dob</description>
        <externalDeveloperName>idn_user_vrfyng_dob</externalDeveloperName>
        <label>User verifying DOB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng_ssn__c</fullName>
        <description>idn_user_vrfyng_ssn</description>
        <externalDeveloperName>idn_user_vrfyng_ssn</externalDeveloperName>
        <label>User verifying SSN</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_child_idea__c</fullName>
        <description>ind_child_idea</description>
        <externalDeveloperName>ind_child_idea</externalDeveloperName>
        <label>Referred to Disabilities Education Act?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_child_screen__c</fullName>
        <description>ind_child_screen</description>
        <externalDeveloperName>ind_child_screen</externalDeveloperName>
        <label>Referred to Early &amp; Periodic Screening?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_notify_sidmod__c</fullName>
        <description>ind_notify_sidmod</description>
        <externalDeveloperName>ind_notify_sidmod</externalDeveloperName>
        <label>Individual Cleared</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_out_house__c</fullName>
        <description>ind_out_house</description>
        <externalDeveloperName>ind_out_house</externalDeveloperName>
        <label>Out of house indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_train_curr__c</fullName>
        <description>ind_train_curr</description>
        <externalDeveloperName>ind_train_curr</externalDeveloperName>
        <label>Current Training indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_first__c</fullName>
        <description>nam_first</description>
        <externalDeveloperName>nam_first</externalDeveloperName>
        <label>First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_first_other__c</fullName>
        <description>nam_first_other</description>
        <externalDeveloperName>nam_first_other</externalDeveloperName>
        <label>Other First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_last__c</fullName>
        <description>nam_last</description>
        <externalDeveloperName>nam_last</externalDeveloperName>
        <label>Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_last_other__c</fullName>
        <description>nam_last_other</description>
        <externalDeveloperName>nam_last_other</externalDeveloperName>
        <label>Other Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_mi__c</fullName>
        <description>nam_mi</description>
        <externalDeveloperName>nam_mi</externalDeveloperName>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_mi_other__c</fullName>
        <description>nam_mi_other</description>
        <externalDeveloperName>nam_mi_other</externalDeveloperName>
        <label>Other Middle initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_ssn__c</fullName>
        <description>nbr_ssn</description>
        <externalDeveloperName>nbr_ssn</externalDeveloperName>
        <label>Social Security Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_sndx__c</fullName>
        <description>txt_sndx</description>
        <externalDeveloperName>txt_sndx</externalDeveloperName>
        <label>Soundex Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Individual History</label>
    <pluralLabel>Individual History</pluralLabel>
</CustomObject>